--- a/src/main/resources/templates/popup/ReservaEquip.html
+++ b/src/main/resources/templates/popup/ReservaEquip.html
@@ -7,7 +7,7 @@
         <span class="close" onclick="closeReservePopup()">&times;</span>
         <h2>Reserva de Equipamento</h2>
         <form>
-            <label for="nome">Nome da Pessoa:</label>
+            <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
 
             <label for="dataReserva">Data da Reserva:</label>
@@ -123,3 +123,4 @@
         </form>
     </div>
 </div>
+
