--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Biopark Educação</title>
-    <link rel="stylesheet" href="/src/main/resources/static/login.css" th:href="@{/login.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}" href="/src/main/resources/static/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -29,10 +29,11 @@
                     <i class="fas fa-sign-in-alt"></i> Entrar
                 </button>
             </form>
-            <!-- Exibir mensagem de erro -->
+
+
             <div id="error-message" class="error-message" th:if="${error}" th:text="${error}"></div>
         </div>
     </div>
-    <script src="script.js" th:src="@{/script.js}"></script>
+    <script src="/src/main/resources/static/js/script.js" th:src="@{/js/script.js}"></script>
 </body>
 </html>
