--- a/src/main/resources/templates/listaSalas.html
+++ b/src/main/resources/templates/listaSalas.html
@@ -107,6 +107,9 @@
             </form>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2024 Biopark Educação | Todos os direitos reservados</p>
+    </footer>
 
     <script src="/src/main/resources/static/js/popup/resersala.js" th:src="@{/js/popup/resersala.js}"></script>
     <script src="/src/main/resources/static/js/popup/script.js" th:src="@{/js/popup/script.js}"></script>
