--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,6 +34,10 @@
             <div id="error-message" class="error-message" th:if="${error}" th:text="${error}"></div>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Biopark Educação | Todos os direitos reservados</p>
+    </footer>
     <script src="/src/main/resources/static/js/script.js" th:src="@{/js/script.js}"></script>
 </body>
 </html>
