--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -21,7 +21,7 @@
             <li><a th:href="@{/salas}" class="nav-link">Salas</a></li>
             <li><a th:href="@{/equipamentos}" class="nav-link">Equipamentos</a></li>
             <li><a th:href="@{/reservas}" class="nav-link">Reservas</a></li>
-            <li><a th:href="@{/relatorios}" class="nav-link">Relatórios</a></li>
+            <li><a th:href="@{/page/relatorios}" class="nav-link">Relatórios</a></li>
             <li><a th:href="@{/usuarios}" class="nav-link">Usuários</a></li>
         </ul>
     </nav>
@@ -94,5 +94,9 @@
     <script src="/src/main/resources/static/js/popup/usuarios.js" th:src="@{/js/popup/usuarios.js}"></script>
     <script src="/src/main/resources/static/js/popup/script.js" th:src="@{/js/popup/script.js}"></script>
     <script src="/src/main/resources/static/js/popup/addusuario.js" th:src="@{/js/popup/addusuario.js}"></script>
+
+    <footer>
+        <p>&copy; 2024 Biopark Educação | Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
