--- a/src/main/resources/static/css/usuarios.css
+++ b/src/main/resources/static/css/usuarios.css
@@ -85,3 +85,35 @@ main {
     align-items: center;
     flex-direction: column;
 }
+
+/* Estilo do botão de remover */
+.btn-remove {
+    background-color: #f44336; /* Cor vermelha */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 14px;
+    display: inline-flex; /* Garante que o botão esteja na mesma linha */
+    align-items: center;
+    gap: 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+/* Estilo do botão ao passar o mouse */
+.btn-remove:hover {
+    background-color: #d32f2f;
+    opacity: 0.8;
+}
+
+/* Estilo do botão ao ter o foco */
+.btn-remove:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Ícone do botão */
+.fas.fa-trash-alt {
+    font-size: 16px;
+}
