--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -719,6 +719,8 @@
         box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1); /* Sombra elegante */
         text-align: center;
         justify-content: center;
+        cursor: pointer;
+        display: center;
     }
 
     /* Lista de botões */
