Abertura de PopUp

--- a/src/main/resources/templates/listaEquipamentos.html
+++ b/src/main/resources/templates/listaEquipamentos.html
@@ -59,7 +59,7 @@
                         <td th:text="${equipamento.nome}"></td>
                         <td th:text="${equipamento.status}"></td>
                         <td>
-                            <button class="btn-reserve" onclick="openReserveModal([[${equipamento.id}]], '[[${equipamento.nome}]]')">
+                            <button class="btn-reserve" >
                                 <i class="fas fa-calendar-alt"></i> Reservar
                             </button>
                         </td>
