Ajuste botão de reserva

--- a/src/main/resources/templates/listaSalas.html
+++ b/src/main/resources/templates/listaSalas.html
@@ -72,11 +72,14 @@
                         <td th:text="${sala.capacidade}"></td>
                         <td th:text="${sala.status}"></td>
                         <td>
-                            <button class="btn-reserve" 
-                                    th:data-sala-id="${sala.id}" 
-                                    onclick="openReserveModal(this)">
-                                <i class="fas fa-calendar-alt"></i> Reservar
-                            </button>
+                            <td>
+                                <button class="btn-reserve" 
+                                        th:data-sala-id="${sala.id}" 
+                                        onclick="openReserveModal(this)" 
+                                        th:if="${sala.status != T(com.example.SistemaReservaSalas.models.Sala.StatusSala).OCUPADA and sala.status != T(com.example.SistemaReservaSalas.models.Sala.StatusSala).EM_MANUTENCAO}">
+                                    <i class="fas fa-calendar-alt"></i> Reservar
+                                </button>
+                            </td>                            
                         </td>
                     </tr>
                 </tbody>
